tests/int/deps_command/snapshots/integration__int__deps_command__error_cases__should_error_for_invalid_crate_path.snap
---
source: tests/int/deps_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /nonexistent/path
    - deps
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Provided path '/nonexistent/path' does not exist
