tests/int/deps_command/snapshots/integration__int__deps_command__error_cases__should_error_for_invalid_depth_zero.snap
---
source: tests/int/deps_command/error_cases.rs
info:
  program: crawk
  args:
    - deps
    - "-d"
    - "0"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '0' for '--depth <DEPTH>': depth must be at least 1

For more information, try '--help'.
